2005-02-27 Alex Roitman  <shura@alex.neuro.umn.edu>
	* src/DbPrompter.py (format_maker): Add mnemonic activation target
	to the format selector label; Use new import format; don't treat
	native formats as plugins anymore.
	* src/PluginMgr.py: Add format name to import registration.
	* src/ReadGedcom.py: Cleanups; Don't register already native import.
	* src/ReadXML.py: Don't register already native import.
	* src/data/gramps.xml: Add magic patterns for XML, GEDCOM, and GW.
	* src/plugins/ImportGeneWeb.py: Register with format name.
	* src/plugins/ReadNative.py: Remove obsolete file.
	* src/plugins/ReadPkg.py: Lots of cleanups; Register with format name.

2005-02-27  Don Allingham  <dallingham@users.sourceforge.net>
	* src/plugins/NavWebPage.py: add the ability to have notes
	attached to the Introduction and Home pages

2005-02-27  Julio Sanchez  <jsanchez@users.sourceforge.net>
	* src/MergeData.py: partial set of changes to handle new API

2005-02-27  Julio Sanchez  <jsanchez@users.sourceforge.net>
	* src/MergeData.py: preserve most data while merging families
	* src/PeopleView.py: allow multiple selection in people list
	* src/ReadGedcom.py: keep source information in families

2005-02-26  Don Allingham  <dallingham@users.sourceforge.net>
	* src/AddrEdit.py: update main source list after source addition
	* src/AttrEdit.py: update main source list after source addition
	* src/EditPerson.py: update main source list after source addition
	and place addition
	* src/EventEdit.py: update main source list after source addition
	and place addition
	* src/FamilyView.py: update main source list after source addition
	* src/Marriage.py: update main source list after source addition
	* src/NameEdit.py: update main source list after source addition
	* src/Sources.py: update main source list after source addition
	* src/gramps_main.py: update main source list after source addition
	* src/const.py.in: new constants

2005-02-25  Don Allingham  <dallingham@users.sourceforge.net>