@@ -1,7 +1,7 @@
 #
 # Gramps - a GTK+/GNOME based genealogy program
 #
-# Copyright (C) 2000-2004  Donald N. Allingham
+# Copyright (C) 2000-2005  Donald N. Allingham
 #
 # This program is free software; you can redistribute it and/or modify
 # it under the terms of the GNU General Public License as published by
@@ -200,6 +200,7 @@ class MySelect(gtk.ComboBoxEntry):
     
     def __init__(self,transtable):
         gtk.ComboBoxEntry.__init__(self)
+        self.transtable = transtable
         AutoComp.fill_combo(self,transtable.get_values())
         self.show()
         
